fix(lovelock): align engraving certificate to Air lovelock_engraving_xml layout
Reposition avatars, caption, date, separator and names using absolute coordinates from lovelock_engraving_xml.xml (375x210). Restore Air typography (#59224a) and the close hitbox. Keeps the official Nitro engraving-lock spritesheet background.

PurseView changes are tracked separately in PR #313.

--- a/src/css/widgets/FurnitureWidgets.css
+++ b/src/css/widgets/FurnitureWidgets.css
@@ -413,62 +413,128 @@
     }
 }
 
+/* lovelock_engraving_xml.xml — 375×210, absolute layout */
 .nitro-engraving-lock-view {
+    position: relative;
     width: 375px;
     height: 210px;
-    background-position: 0px 0px;
     background-image: url('@/assets/images/room-widgets/engraving-lock-widget/engraving-lock-spritesheet.png');
+    background-position: 0 0;
+    background-repeat: no-repeat;
+    image-rendering: pixelated;
+    color: #59224a;
+    font-family: UbuntuCondensed, Ubuntu, sans-serif;
+    font-weight: 700;
+    font-size: 13px;
+    line-height: 17px;
+    text-shadow: 0 1px #ffffff;
+    user-select: none;
+}
 
-    color: #622e54;
-    font-weight: bold;
-    font-size: 16px;
-    text-shadow: 0px 1px white;
+.nitro-engraving-lock-view.engraving-lock-3 {
+    background-position: 0 -210px;
+    color: #614110;
+}
 
-    &.engraving-lock-3 {
-        background-position: 0px -210px;
-        color: #614110;
-    }
+.nitro-engraving-lock-view.engraving-lock-4 {
+    background-position: 0 -420px;
+    color: #f1dcc8;
+    text-shadow: 0 2px rgba(0, 0, 0, 0.4);
+}
 
-    &.engraving-lock-4 {
-        background-position: 0px -420px;
-        color: #f1dcc8;
-        text-shadow: 0px 2px rgba(0, 0, 0, 0.4);
+.nitro-engraving-lock-view .engraving-lock-close {
+    position: absolute;
+    top: 33px;
+    right: 24px;
+    width: 21px;
+    height: 17px;
+    padding: 0;
+    border: 0;
+    background: transparent;
+    cursor: pointer;
+}
 
-        .engraving-lock-avatar {
-            margin-bottom: 10px;
-        }
-    }
+.nitro-engraving-lock-view .engraving-lock-avatar {
+    position: absolute;
+    top: 7px;
+    width: 70px;
+    height: 115px;
+    overflow: hidden;
+    pointer-events: none;
+}
 
-    .engraving-lock-close {
-        position: absolute;
-        cursor: pointer;
-        width: 15px;
-        height: 15px;
-        top: 34px;
-        right: 27px;
-    }
+.nitro-engraving-lock-view .engraving-lock-avatar .avatar-image {
+    position: absolute !important;
+    inset: 0 !important;
+    width: 100% !important;
+    height: 100% !important;
+    left: 0 !important;
+}
 
-    .engraving-lock-avatar {
-        width: 70px;
-        height: 120px;
+.nitro-engraving-lock-view .engraving-lock-avatar--left {
+    left: 115px;
+}
 
-        div {
-            position: absolute;
-            margin-top: -5px;
-        }
+.nitro-engraving-lock-view .engraving-lock-avatar--right {
+    left: 186px;
+}
 
-        &:nth-child(1) {
-            div {
-                margin-left: -10px;
-            }
-        }
+.nitro-engraving-lock-view .engraving-lock-header {
+    position: absolute;
+    top: 126px;
+    left: 82px;
+    width: 217px;
+    margin: 0;
+    text-align: center;
+}
 
-        &:nth-child(2) {
-            div {
-                margin-left: -15px;
-            }
-        }
-    }
+.nitro-engraving-lock-view .engraving-lock-date {
+    position: absolute;
+    top: 151px;
+    left: 143px;
+    width: 97px;
+    margin: 0;
+    text-align: center;
+}
+
+.nitro-engraving-lock-view .engraving-lock-separator {
+    position: absolute;
+    top: 168px;
+    left: 40px;
+    width: 295px;
+    height: 1px;
+    margin: 0;
+    background: rgba(89, 34, 74, 0.22);
+    border: 0;
+}
+
+.nitro-engraving-lock-view.engraving-lock-3 .engraving-lock-separator {
+    background: rgba(97, 65, 16, 0.25);
+}
+
+.nitro-engraving-lock-view.engraving-lock-4 .engraving-lock-separator {
+    background: rgba(241, 220, 200, 0.25);
+}
+
+.nitro-engraving-lock-view .engraving-lock-name {
+    position: absolute;
+    top: 175px;
+    margin: 0;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+.nitro-engraving-lock-view .engraving-lock-name--left {
+    left: 19px;
+    width: 150px;
+    text-align: right;
+}
+
+.nitro-engraving-lock-view .engraving-lock-name--right {
+    left: 199px;
+    width: 87px;
+    text-align: left;
 }
 
 .nitro-widget-high-score {
